--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ GRW2017/~$grw2017_poster.pptx
 *.tmp
 EL-EN 2017/~$-EN_makale.docx
 EL-EN 2017/loss/~$loss_table.xlsx
+ISIE 2017/sunum/~$ISIE2017_OralPres_Mesut_Uğur.pptx
