--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ GRW2017/~$grw2017_poster.pptx
 EL-EN 2017/~$-EN_makale.docx
 EL-EN 2017/loss/~$loss_table.xlsx
 ISIE 2017/sunum/~$ISIE2017_OralPres_Mesut_Uğur.pptx
+IMMD BAP/BAP 1. Gelişme Raporu/~$.3. Projedeki Bilimsel Gelişmeler ve Sonuçlar.docx
