analytical machine design for IMMD.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ EL-EN 2017/loss/~$loss_table.xlsx
 ISIE 2017/sunum/~$ISIE2017_OralPres_Mesut_Uğur.pptx
 IMMD BAP/BAP 1. Gelişme Raporu/~$.3. Projedeki Bilimsel Gelişmeler ve Sonuçlar.docx
 Paper/ELECO 2017/Template/~$eco2017_MsWord.docx
+Paper/ELECO 2017/Makale/~$eco2017_Makale.docx
+Paper/EL-EN 2017/final submission/~$-EN_makale_after_review.docx
