EL-EN sunum first draft.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ IMMD BAP/BAP 1. Gelişme Raporu/~$.3. Projedeki Bilimsel Gelişmeler ve Sonuçla
 Paper/ELECO 2017/Template/~$eco2017_MsWord.docx
 Paper/ELECO 2017/Makale/~$eco2017_Makale.docx
 Paper/EL-EN 2017/final submission/~$-EN_makale_after_review.docx
+Paper/EL-EN 2017/sunum/~$ELEN2017_OralPres_Mesut_Uğur.pptx
