--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Paper/ELECO 2017/Template/~$eco2017_MsWord.docx
 Paper/ELECO 2017/Makale/~$eco2017_Makale.docx
 Paper/EL-EN 2017/final submission/~$-EN_makale_after_review.docx
 Paper/EL-EN 2017/sunum/~$ELEN2017_OralPres_Mesut_Uğur.pptx
+Project/BAP/Procurement/~$bütçe-update.xlsx
