Design report. I am still not sure about using Excel or MATLAB, but I see that word is not an option. What am I doing?

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Paper/EL-EN 2017/sunum/~$ELEN2017_OralPres_Mesut_Uğur.pptx
 Project/BAP/Procurement/~$bütçe-update.xlsx
 Project/BAP/Design/dclink/~$lcfiltersimres.xlsx
 Project/BAP/Design/dclink/~$cap_bench.xlsx
+Project/BAP/Design/~$sign Report.docx
