Design on excel up to slot fill factor. Fill factor is currently 1.6, which is not possible. Maxwell says it is 0.6.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Project/BAP/Procurement/~$bütçe-update.xlsx
 Project/BAP/Design/dclink/~$lcfiltersimres.xlsx
 Project/BAP/Design/dclink/~$cap_bench.xlsx
 Project/BAP/Design/~$sign Report.docx
+Project/BAP/Design/~$Designfile.xlsx
