Design file continue. Satın almalar vs.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ Project/BAP/Design/dclink/~$lcfiltersimres.xlsx
 Project/BAP/Design/dclink/~$cap_bench.xlsx
 Project/BAP/Design/~$sign Report.docx
 Project/BAP/Design/~$Designfile.xlsx
+Project/BAP/Design/Design report/~$Designfile.V1.1.xlsx
+Project/BAP/Design/Design report/~$Designfile.V1.0.xlsx
