--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Project/BAP/Design/~$sign Report.docx
 Project/BAP/Design/~$Designfile.xlsx
 Project/BAP/Design/Design report/~$Designfile.V1.1.xlsx
 Project/BAP/Design/Design report/~$Designfile.V1.0.xlsx
+Paper/IESES 2018/First Submission/~$Makale.docx
+Paper/CPE-POWERENG 2018/~$14_04_msw_a4_format.doc
