--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Project/BAP/Design/Design report/~$Designfile.V1.1.xlsx
 Project/BAP/Design/Design report/~$Designfile.V1.0.xlsx
 Paper/IESES 2018/First Submission/~$Makale.docx
 Paper/CPE-POWERENG 2018/~$14_04_msw_a4_format.doc
+Paper/EPE 2018/Abstract submission/~$bmission_Abstract.docx
+Paper/EPE 2018/Abstract submission/~$stract.docx
