Makale Çalışmaları: Matlab Dosyaları

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Paper/IESES 2018/First Submission/~$Makale.docx
 Paper/CPE-POWERENG 2018/~$14_04_msw_a4_format.doc
 Paper/EPE 2018/Abstract submission/~$bmission_Abstract.docx
 Paper/EPE 2018/Abstract submission/~$stract.docx
+Project/3501/Furkan/AllData.mat
