weekly plan update. makale çalışmaları. RPG submitted. CPE-POWERENG is not finished yet.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ Paper/CPE-POWERENG 2018/~$14_04_msw_a4_format.doc
 Paper/EPE 2018/Abstract submission/~$bmission_Abstract.docx
 Paper/EPE 2018/Abstract submission/~$stract.docx
 Project/3501/Furkan/AllData.mat
+Paper/CPE-POWERENG 2018/~$mplate_2014_04_msw_a4_format.doc
+Paper/CPE-POWERENG 2018/Submission/~$E_POWERENG_Makale_Submit.doc
+Paper/CPE-POWERENG 2018/Submission/~$Makale.docx
