--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ Project/3501/Furkan/AllData.mat
 Paper/CPE-POWERENG 2018/~$mplate_2014_04_msw_a4_format.doc
 Paper/CPE-POWERENG 2018/Submission/~$E_POWERENG_Makale_Submit.doc
 Paper/CPE-POWERENG 2018/Submission/~$Makale.docx
+Paper/PEMD 2018/Full Paper/~$nal_Paper_PEMD.doc
+Paper/PEMD 2018/Full Paper/~$eviews.docx
+Paper/PEMD 2018/Full Paper/~$kale taslağı.docx
+Paper/PEMD 2018/Abstract Submission/~$stract.docx
