--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ Paper/PEMD 2018/Full Paper/~$nal_Paper_PEMD.doc
 Paper/PEMD 2018/Full Paper/~$eviews.docx
 Paper/PEMD 2018/Full Paper/~$kale taslağı.docx
 Paper/PEMD 2018/Abstract Submission/~$stract.docx
+Paper/PEMD 2018/Optimization Work/~$parameters.xlsx
