Haftalık plan ve klasör düzenlenmesi.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ Paper/PEMD 2018/Full Paper/~$eviews.docx
 Paper/PEMD 2018/Full Paper/~$kale taslağı.docx
 Paper/PEMD 2018/Abstract Submission/~$stract.docx
 Paper/PEMD 2018/Optimization Work/~$parameters.xlsx
+Project/3501/Furkan/Capacitances.mat
+Project/3501/Furkan/MAT File Store/Capacitances.mat
+Project/3501/Furkan/MAT File Store/AllData.mat
