Optimizasyon matlab modellemesine devam ediliyor.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Paper/PEMD 2018/Optimization Work/~$parameters.xlsx
 Project/3501/Furkan/Capacitances.mat
 Project/3501/Furkan/MAT File Store/Capacitances.mat
 Project/3501/Furkan/MAT File Store/AllData.mat
+Paper/PEMD 2018/Optimization Work/study/~$parameters.xlsx
