--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ Project/3501/Furkan/Capacitances.mat
 Project/3501/Furkan/MAT File Store/Capacitances.mat
 Project/3501/Furkan/MAT File Store/AllData.mat
 Paper/PEMD 2018/Optimization Work/study/~$parameters.xlsx
+*.mat
