PEMD makalenin taslağı oluşturuldu. Abstract ve intro yazıldı.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ Project/3501/Furkan/MAT File Store/Capacitances.mat
 Project/3501/Furkan/MAT File Store/AllData.mat
 Paper/PEMD 2018/Optimization Work/study/~$parameters.xlsx
 *.mat
+Paper/CPE-POWERENG 2018/Submission/~$E_POWERENG_Makale_Submit.docx
+Paper/PEMD 2018/Full Paper/Help doc/~$eviews.docx
+Paper/PEMD 2018/Full Paper/Help doc/~$mplate.doc
