Modeli anlatmaya devam. Electrical bitti. Electromagnetic büyük oranda bitti. Makalenin sığmayacağı kesinleşti :)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ Paper/PEMD 2018/Optimization Work/study/~$parameters.xlsx
 Paper/CPE-POWERENG 2018/Submission/~$E_POWERENG_Makale_Submit.docx
 Paper/PEMD 2018/Full Paper/Help doc/~$eviews.docx
 Paper/PEMD 2018/Full Paper/Help doc/~$mplate.doc
+Paper/PEMD 2018/Full Paper/~$nal_Paper_PEMD.docx
+Paper/PEMD 2018/Optimization Work/study/~$lenebilir.docx
