PEMD'de model kısmı hemen hemen bitti. Heat sink natural convection thermal model MATLAB'ta oluşturuldu. Galiba çalışıyor :) Akşam sonuçlar elde edilecek ve ona göre makale son şeklini alacak.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ Paper/PEMD 2018/Full Paper/Help doc/~$eviews.docx
 Paper/PEMD 2018/Full Paper/Help doc/~$mplate.doc
 Paper/PEMD 2018/Full Paper/~$nal_Paper_PEMD.docx
 Paper/PEMD 2018/Optimization Work/study/~$lenebilir.docx
+Paper/PEMD 2018/Optimization Work/study/~$ermal model.docx
