--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ Paper/PEMD 2018/Full Paper/Help doc/~$mplate.doc
 Paper/PEMD 2018/Full Paper/~$nal_Paper_PEMD.docx
 Paper/PEMD 2018/Optimization Work/study/~$lenebilir.docx
 Paper/PEMD 2018/Optimization Work/study/~$ermal model.docx
+Project/3501/Furkan/GaN Model/AllDetailsIncluded/~$Results.xlsx
