ECCE Makalesi Introduction ve References kısımları dışında tamamlandı aşağı yukarı. Yarın bu kısımları da ekleyip bugün yazdıklarımı tekrar düzenlemeyi düşünüyorum. Bu akşam vaktiniz olursa yazdığım kısımlara bakabilir misiniz? Yazdığım kısımda referansları henüz eklemediğim için herşey X olarak görünüyor ama kafamda aşağı yukarı hangi referansları vereceğim belli. @ozank @mesutto

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ Paper/PEMD 2018/Full Paper/~$nal_Paper_PEMD.docx
 Paper/PEMD 2018/Optimization Work/study/~$lenebilir.docx
 Paper/PEMD 2018/Optimization Work/study/~$ermal model.docx
 Project/3501/Furkan/GaN Model/AllDetailsIncluded/~$Results.xlsx
+Paper/ECCE 2018/~$CE 2018 - Digest.docx
