--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ Paper/PEMD 2018/Optimization Work/study/~$lenebilir.docx
 Paper/PEMD 2018/Optimization Work/study/~$ermal model.docx
 Project/3501/Furkan/GaN Model/AllDetailsIncluded/~$Results.xlsx
 Paper/ECCE 2018/~$CE 2018 - Digest.docx
+Literature/~$terature_immd.docx
