--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Paper/PEMD 2018/Optimization Work/study/~$ermal model.docx
 Project/3501/Furkan/GaN Model/AllDetailsIncluded/~$Results.xlsx
 Paper/ECCE 2018/~$CE 2018 - Digest.docx
 Literature/~$terature_immd.docx
+Literature/~$terature_researchgroup_based.docx
