Sync literature presentation.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Project/3501/Furkan/GaN Model/AllDetailsIncluded/~$Results.xlsx
 Paper/ECCE 2018/~$CE 2018 - Digest.docx
 Literature/~$terature_immd.docx
 Literature/~$terature_researchgroup_based.docx
+Literature/~$immd_literature.pptx
