PEMC section 2 is completed.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ Paper/ECCE 2018/~$CE 2018 - Digest.docx
 Literature/~$terature_immd.docx
 Literature/~$terature_researchgroup_based.docx
 Literature/~$immd_literature.pptx
+Paper/PEMC 2018/Submission/~$mc2018papersubmittion.docx
