PEMC routine çalışmaları.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Literature/~$terature_immd.docx
 Literature/~$terature_researchgroup_based.docx
 Literature/~$immd_literature.pptx
 Paper/PEMC 2018/Submission/~$mc2018papersubmittion.docx
+Paper/PEMC 2018/Submission/~$mc2018papersubmittion_modification.docx
