ICEM makale ve PEMD sunumda güncellemeler.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Literature/~$immd_literature.pptx
 Paper/PEMC 2018/Submission/~$mc2018papersubmittion.docx
 Paper/PEMC 2018/Submission/~$mc2018papersubmittion_modification.docx
 Paper/ICEM 2018/Makale/~$EM2018-Makale-submission.docx
+Paper/PEMD 2018/Presentation/~$PEMD2018_OralPres_Mesut_Uğur.pptx
