Haftalık rapor (kod model sonuçları).

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Paper/ICEM 2018/Makale/~$EM2018-Makale-submission.docx
 Paper/PEMD 2018/Presentation/~$PEMD2018_OralPres_Mesut_Uğur.pptx
 Project/3501/Furkan/Board Connectors/~$Connectors.xlsx
 Thesis/Tez İzleme Komitesi/~$Tez Önerisi Savunması_Mayıs 2018.pptx
+Weekly Report/~$.05.2018_Weekly Report_MUgur.docx
