--- a/Project/3501/Furkan/DSP/DPT/.cproject
+++ b/Project/3501/Furkan/DSP/DPT/.cproject
@@ -74,7 +74,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="DSP2833x_Adc.c|Double Pulse Test (ADC).c|Double Pulse Test(VARY).c|Synch.c|Double Pulse Test.c|Lab7_9.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Double Pulse Test.c|DSP2833x_Adc.c|Double Pulse Test (ADC).c|Double Pulse Test(VARY).c|Synch.c|Lab7_9.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
