Monthly plan updated.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ Project/BAP/Reports/BAP 2. Gelişme Raporu/RAPOR.pdf
 Project/3501/Furkan/EPE2018 - Simulations/Ron_Bot_ON.fig
 Project/3501/Furkan/EPE2018 - Simulations/Roff_Top_OFF.fig
 Project/3501/Furkan/EPE2018 - Simulations/Roff_Bot_OFF.fig
+Paper/ICEM 2018/Final paper/Manuscript Submission and Review System_ Copyright Form to be filled in.pdf
