A very important discussions are made on DC Bus oscillations with @mesutto

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ Project/3501/Furkan/EPE2018 - Simulations/Roff_Bot_OFF.fig
 Paper/ICEM 2018/Final paper/Manuscript Submission and Review System_ Copyright Form to be filled in.pdf
 Paper/EPE 2018/Poster/~$GradStar Poster.pptx
 Literature/~$immd_ver2_research.pptx
+*.mldatx
