--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ Paper/ICEM 2018/Final paper/Manuscript Submission and Review System_ Copyright F
 Paper/EPE 2018/Poster/~$GradStar Poster.pptx
 Literature/~$immd_ver2_research.pptx
 *.mldatx
+Thesis/Tez İzleme Komitesi/Spring 2018/~$Tez Önerisi Savunması_Mayıs 2018.pptx
