An inverter simulation file is created and DC bus structure is implemented. The ceramic capacitors are added to the simulation with ESL/ESR values as well. In Q3D Extractor the layout inductance for ceramic capacitor is identified. For 270V bus voltage, the maximum value of the switch stress rises 550V and for 220V this value is 500V. As a result, the simulation results do not verify the overvoltage breakdown. For more accurate conclusions, the experimental results should be compared with the simulation results for DPT case.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ Paper/EPE 2018/Poster/~$GradStar Poster.pptx
 Literature/~$immd_ver2_research.pptx
 *.mldatx
 Thesis/Tez İzleme Komitesi/Spring 2018/~$Tez Önerisi Savunması_Mayıs 2018.pptx
+*.raw
