Tik raporu diye başlayan süreç mini bir tez yazımına dönüştü :)

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ Literature/~$immd_ver2_research.pptx
 *.mldatx
 Thesis/Tez İzleme Komitesi/Spring 2018/~$Tez Önerisi Savunması_Mayıs 2018.pptx
 *.raw
+Paper/EPE 2018/Full Paper/~$E-2018-FullPaper.docx
