--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ Literature/~$immd_ver2_research.pptx
 Thesis/Tez İzleme Komitesi/Spring 2018/~$Tez Önerisi Savunması_Mayıs 2018.pptx
 *.raw
 Paper/EPE 2018/Full Paper/~$E-2018-FullPaper.docx
+Thesis/Tez İzleme Komitesi/Fall 2018/~$Tez İzleme Komitesi Sunumu_Aralık 2018.pptx
