--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ Thesis/Tez İzleme Komitesi/Spring 2018/~$Tez Önerisi Savunması_Mayıs 2018.pp
 Paper/EPE 2018/Full Paper/~$E-2018-FullPaper.docx
 Thesis/Tez İzleme Komitesi/Fall 2018/~$Tez İzleme Komitesi Sunumu_Aralık 2018.pptx
 Thesis/Tez İzleme Komitesi/Fall 2018/~$stract ve öz.docx
+Paper/ECCE 2019/~$CE paper potential references.docx
