--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ Paper/EPE 2018/Full Paper/~$E-2018-FullPaper.docx
 Thesis/Tez İzleme Komitesi/Fall 2018/~$Tez İzleme Komitesi Sunumu_Aralık 2018.pptx
 Thesis/Tez İzleme Komitesi/Fall 2018/~$stract ve öz.docx
 Paper/ECCE 2019/~$CE paper potential references.docx
+Project/3501/Furkan/IMMD Production/~$Gate Driver Test Planı.xlsx
+Prototype/Test/kontrol kartı/~$Kontrol Kartı Test Planı.xlsx
