Kontrol kartı testleri güncelleme: 1. @furkankarakaya ile daha önce yapılan testler ile flyback çalıştırıldı. 230'a kadar çıkıldı. Çıkış gerilimi 15.1V stabil. VDD_FLY yüke göre değişken. 2. Flyback'te giriş konektöründe bazı atlatmalar yapıldı. 3. Flyback'te yükleme yapıldı. 2 fan + 2 tane 4.5W'lık direnç yükünde VDD_FLY 20V'a dayandığı için daha fazla yüklenmedi. Önce gerçek yükün kaç W olduğuna bakılacak. Sonra araya direnç atma gibi çözümler denenecek. 4. Gerilim ölçümünde, çıkış filtre devre dışı iken data alındı (LED takılı değil). Module 1 sorunsuz çalışıyor. 80mV offset ve çok az nonlineerlik var. Filtreyi devreye alınca gariplik oluyor. Gerilim ölçümlerindeki filtre giriş dirençleri şimdilik söküldü. 5. Module 1'e 300V'a kadar clearance testi yapılmış oldu. 6. Akım ölçümlerinden birinin filtresi dışarıdan gerilim verilerek denendi. sorunsuz çalışıyor. Gerilimin filtresine tekrar bakılacak.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ Thesis/Tez İzleme Komitesi/Fall 2018/~$stract ve öz.docx
 Paper/ECCE 2019/~$CE paper potential references.docx
 Project/3501/Furkan/IMMD Production/~$Gate Driver Test Planı.xlsx
 Prototype/Test/kontrol kartı/~$Kontrol Kartı Test Planı.xlsx
+Prototype/Test/kontrol kartı/~$ControlPower.xlsx
