PWM çalışmasının CCS projesi

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ Paper/ECCE 2019/~$CE paper potential references.docx
 Project/3501/Furkan/IMMD Production/~$Gate Driver Test Planı.xlsx
 Prototype/Test/kontrol kartı/~$Kontrol Kartı Test Planı.xlsx
 Prototype/Test/kontrol kartı/~$ControlPower.xlsx
+Prototype/Test/kontrol kartı/pwm/~$wm_res.docx
