Yeni Gate Driver kartının (V1.3) ilk testleri yapıldı. Genel olarak başarılı bir gün. Tüm detaylar test günlüğünde.

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Project/3501/Furkan/IMMD Production/~$Gate Driver Test Planı.xlsx
 Prototype/Test/kontrol kartı/~$Kontrol Kartı Test Planı.xlsx
 Prototype/Test/kontrol kartı/~$ControlPower.xlsx
 Prototype/Test/kontrol kartı/pwm/~$wm_res.docx
+Prototype/Test/test diaries/11.04.2019/~$11.04.2019_Results.xlsx
+Prototype/Test/test diaries/11.04.2019/~$19.04.11 - Test Günlüğü - GateDriverV1.3 - İlkTest.docx
