DSP'de yapılan çalışmalar: 1. Sistem clocking ayarları gözden geçirildi. Internal osilatörün kullanımında bir sorun olmadığı doğrulandı. Şu anda INTOSC1 (10 MHz) kullanılıyor. PLL ayarlamaları yapılarak sistemin 200 MHz clock ile çalışması sağlandı. 2. PWM clocking ayarlarına bakıldı. Prescale ve Division'lar ile PWM clock source SysClk'a eşit yapıldı. TBPRD ile elde edilen frekans ile bu doğrulandı. 3. ADC clocking ayarlarına bakıldı. Önerilen maksimum ADCCLK 50 MHz olduğu için Prescale /4 yapıldı. 4. ADC okumalarındaki sorun acquisition süresinin kısa tutulması idi. Bu süre uzatıldı (yeni clock dikkate alınarak). Şu an tüm kanallardan düzgün okuma yapılıyor. 5. ADC'de internal temperature sensor başarıyla okundu. 6. ADC'de tüm ölçümlerin gerilim ve akım hesaplamaları girildi. Geçen süre yaklaşık 2us. Bu süre FPU optimizasyon ayarları ile kısaltıldı. Gerek duyulursa tekrar bakılacak. 7. PWM ve interrupt anları elde edildi (timing.jpg).
EQEP dışında DSP'de çalıştırılacak modül kalmadı. Bundan sonra EQEP ile birlikte kontrol yazılımları, SPWM vs. bakılacak.

--- a/Prototype/Test/kontrol kartı/control_board_v0.1/Debug/makefile
+++ b/Prototype/Test/kontrol kartı/control_board_v0.1/Debug/makefile
@@ -11,6 +11,7 @@ GEN_CMDS__FLAG :=
 
 ORDERED_OBJS += \
 "./F2837xD_CodeStartBranch.obj" \
+"./F2837xD_TempSensorConv.obj" \
 "./F2837xD_usDelay.obj" \
 "./main.obj" \
 "../2837x_FLASH_lnk_cpu1_bist.cmd" \
@@ -143,7 +144,7 @@ all: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 control_board_v0.1.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 	@echo 'Building target: "$@"'
 	@echo 'Invoking: C2000 Linker'
-	"C:/ti/ccsv8/tools/compiler/ti-cgt-c2000_18.1.4.LTS/bin/cl2000" -v28 -ml -mt --cla_support=cla1 --float_support=fpu32 --tmu_support=tmu0 --vcu_support=vcu2 --define=CPU1 --define=_FLASH -g --diag_warning=225 --diag_wrap=off --display_error_number -z -m"control_board_v0.1.map" --stack_size=0x200 --warn_sections -i"C:/ti/ccsv8/tools/compiler/ti-cgt-c2000_18.1.4.LTS/lib" -i"C:/ti/ccsv8/tools/compiler/ti-cgt-c2000_18.1.4.LTS/include" --reread_libs --diag_wrap=off --display_error_number --xml_link_info="control_board_v0.1_linkInfo.xml" --rom_model -o "control_board_v0.1.out" $(ORDERED_OBJS)
+	"C:/ti/ccsv8/tools/compiler/ti-cgt-c2000_18.1.4.LTS/bin/cl2000" -v28 -ml -mt --cla_support=cla1 --float_support=fpu32 --tmu_support=tmu0 --vcu_support=vcu2 --fp_mode=relaxed --define=CPU1 --define=_FLASH -g --diag_warning=225 --diag_wrap=off --display_error_number -z -m"control_board_v0.1.map" --stack_size=0x200 --warn_sections -i"C:/ti/ccsv8/tools/compiler/ti-cgt-c2000_18.1.4.LTS/lib" -i"C:/ti/ccsv8/tools/compiler/ti-cgt-c2000_18.1.4.LTS/include" --reread_libs --diag_wrap=off --display_error_number --xml_link_info="control_board_v0.1_linkInfo.xml" --rom_model -o "control_board_v0.1.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: "$@"'
 	@echo ' '
 
@@ -157,8 +158,8 @@ control_board_v0.1.hex: $(EXE_OUTPUTS)
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "F2837xD_CodeStartBranch.obj" "F2837xD_usDelay.obj" "main.obj" 
-	-$(RM) "main.d" 
+	-$(RM) "F2837xD_CodeStartBranch.obj" "F2837xD_TempSensorConv.obj" "F2837xD_usDelay.obj" "main.obj" 
+	-$(RM) "F2837xD_TempSensorConv.d" "main.d" 
 	-$(RM) "F2837xD_CodeStartBranch.d" "F2837xD_usDelay.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
