--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Prototype/Test/kontrol kartı/~$ControlPower.xlsx
 Prototype/Test/kontrol kartı/pwm/~$wm_res.docx
 Prototype/Test/test diaries/11.04.2019/~$11.04.2019_Results.xlsx
 Prototype/Test/test diaries/11.04.2019/~$19.04.11 - Test Günlüğü - GateDriverV1.3 - İlkTest.docx
+Prototype/Test/test diaries/18.04.2019/~$t_results.docx
