6 tur akım probu ile elde edilen akım dalga şekillerine FFT analizi.

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,55 @@ Prototype/Test/kontrol kartı/pwm/~$wm_res.docx
 Prototype/Test/test diaries/11.04.2019/~$11.04.2019_Results.xlsx
 Prototype/Test/test diaries/11.04.2019/~$19.04.11 - Test Günlüğü - GateDriverV1.3 - İlkTest.docx
 Prototype/Test/test diaries/18.04.2019/~$t_results.docx
+Prototype/Test/test diaries/18.04.2019/slprj/sl_proj.tmw
+Prototype/Test/test diaries/18.04.2019/slprj/sim/_sharedutils/shared_file.dmr
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rtGetInf.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rtGetInf.c
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis_ref.rsp
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis_acc_types.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis_acc_private.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis_acc_data.c
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis_acc.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/codedescriptor.dmr
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/__cf_pwm_analysis.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis_acc.c
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis.mk
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis.lnk
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/pwm_analysis.bat
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/multiword_types.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/modelsources.txt
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/defines.txt
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rtwtypes.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rtw_proj.tmw
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rt_nonfinite.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rt_nonfinite.c
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rt_defines.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rtGetNaN.h
+Prototype/Test/test diaries/18.04.2019/slprj/accel/pwm_analysis/rtGetNaN.c
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rtwtypes.h
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rtw_proj.tmw
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rt_nonfinite.h
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rt_nonfinite.c
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis.lnk
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/defines.txt
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/codedescriptor.dmr
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/__cf_pwm_analysis.h
+Prototype/Test/test diaries/2019.04.24/slprj/sl_proj.tmw
+Prototype/Test/test diaries/2019.04.24/slprj/sim/_sharedutils/shared_file.dmr
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rtGetInf.c
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis_acc_data.c
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis_acc.h
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis_acc.c
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis.mk
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rt_defines.h
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rtGetNaN.h
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rtGetNaN.c
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/rtGetInf.h
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis.bat
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/multiword_types.h
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/modelsources.txt
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis_ref.rsp
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis_acc_types.h
+Prototype/Test/test diaries/2019.04.24/slprj/accel/pwm_analysis/pwm_analysis_acc_private.h
+Prototype/Test/test diaries/2019.04.24/pwm_analysis_acc.mexw64
+Prototype/Test/test diaries/18.04.2019/pwm_analysis_acc.mexw64
