Analitik modelleme çalışmaları.

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,30 @@ Prototype/Test/test diaries/2019.05.05/slprj/accel/harmonic_analysis/harmonic_an
 Prototype/Test/test diaries/2019.05.05/slprj/accel/harmonic_analysis/harmonic_analysis_acc.c
 Prototype/Test/test diaries/2019.05.05/slprj/accel/harmonic_analysis/harmonic_analysis.mk
 Prototype/Test/test diaries/2019.05.05/slprj/accel/harmonic_analysis/harmonic_analysis.lnk
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rtwtypes.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rtw_proj.tmw
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rt_nonfinite.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rt_nonfinite.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rt_defines.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rtGetInf.c
+Simulation/analytical model/slprj/sim/_sharedutils/shared_file.dmr
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink_ref.rsp
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink_acc.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink.mk
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink.lnk
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink.bat
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/multiword_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink_acc_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink_acc_private.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink_acc_data.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink_acc.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rtGetNaN.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rtGetNaN.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/rtGetInf.h
+Simulation/analytical model/slprj/sl_proj.tmw
+Simulation/analytical model/~$harmonic_components.xlsx
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/__cf_sim_model_simpledclink.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/codedescriptor.dmr
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/modelsources.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/defines.txt
+Simulation/analytical model/sim_model_simpledclink_acc.mexw64
