Yeni inductancelar ile yeni model kuruluyor.

--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,28 @@ Simulation/balancing/balancing_sim_model_acc.mexw64
 Simulation/balancing/balancing_sim_model_acc.exp
 Simulation/balancing/balancing_sim_model_RL_load_acc.mexw64
 Simulation/balancing/balancing_sim_model_RL_load_acc.exp
+Simulation/balancing/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load.lnk
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rtwtypes.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rtw_proj.tmw
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rt_nonfinite.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rt_nonfinite.c
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rt_defines.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rtGetNaN.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rtGetNaN.c
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rtGetInf.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/rtGetInf.c
+Simulation/modular/slprj/accel/Modular_Model_New_Board/multiword_types.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/modelsources.txt
+Simulation/modular/slprj/accel/Modular_Model_New_Board/defines.txt
+Simulation/modular/slprj/accel/Modular_Model_New_Board/codedescriptor.dmr
+Simulation/modular/slprj/accel/Modular_Model_New_Board/__cf_Modular_Model_New_Board.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board_ref.rsp
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board_acc_types.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board_acc_private.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board_acc_data.c
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board_acc.h
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board_acc.c
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board.mk
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board.lnk
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board.bat
+Simulation/modular/Modular_Model_New_Board_acc.mexw64
