Inductance simulasyonu üzerinde debelenmeceler ve analitik modelleme çalışmaları.

--- a/.gitignore
+++ b/.gitignore
@@ -306,3 +306,6 @@ Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board.m
 Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board.lnk
 Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board.bat
 Simulation/modular/Modular_Model_New_Board_acc.mexw64
+Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board_acc.def
+Simulation/modular/slprj/accel/Modular_Model_New_Board/sfun.map
+Simulation/modular/Modular_Model_New_Board_acc.exp
